Issue #12550: Add chain optional argument to faulthandler.register()

Call the previous signal handler if chain is True.